# RAG

./: .dockerignore  .env.example  .gitignore  DOCUMENTATION_IMPROVEMENTS.md  Dockerfile  Dockerfile.dev  README.md  debug_test.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  rag_cli.py  run_examples.py  test_env_loading.py  test_env_simple.py
config/: config.development.yaml  config.performance.yaml  config.production.yaml  config.testing.yaml  example_config.yaml  no_api_keys.example.yaml  observability.example.yaml
deployment/: nginx.conf  nginx.prod.conf  prometheus.prod.yml  prometheus.yml
deployment/docs/: DEPLOYMENT_GUIDE.md  DOCKER_GUIDE.md  KUBERNETES_GUIDE.md
deployment/k8s/: chroma-deployment.yaml  configmap.yaml  monitoring.yaml  namespace.yaml  nginx-deployment.yaml  rag-engine-deployment.yaml  redis-deployment.yaml  secrets.yaml
deployment/scripts/: cleanup.sh  deploy.sh  health-check.sh
docs/: CONFIGURATION_GUIDE.md  PROJECT_MAP.md  README.md  configuration_management.md  documentation_link_fixes.md  documentation_reorganization_summary.md  error_handling_and_resilience.md  glossary.md  performance_optimization.md
docs/api-reference/: README.md  cli-reference.md  python-sdk.md  rest-api.md  websocket-api.md
docs/architecture/: README.md  components.md  data-flow.md  design-patterns.md  overview.md
docs/configuration/: README.md  configuration-reference.md  environment-setup.md  security.md
docs/deployment/: README.md  bare-metal.md  cloud-providers.md  docker.md  kubernetes.md
docs/development/: README.md  coding-standards.md  contributing.md  development-setup.md  environment-loading.md  (+1 more)
examples/: EXAMPLES.md  GROUNDING_FEATURES_SUMMARY.md  README.md  example_advanced_indexing.py  example_advanced_reranking.py  example_comprehensive_evaluation.py  example_configuration_management.py  example_embedding_providers.py  example_error_handling_resilience.py  example_evaluation_demo.py  example_grounded_generation.py  example_hybrid_retrieval.py  example_integration_test.py  example_monitoring_and_health_checks.py  example_multi_provider_llm.py  example_no_api_keys.py  example_self_correction.py  example_simple.py  example_usage.py  example_vector_store_providers.py  observability_integration.py
scripts/: config_manager.py  performance_benchmark.py
tests/: README.md  __init__.py  test_indexing_manager.py
(+161 files in other folders)
